# notes

./: .gitignore  README.md  configh.sh  plan.org
IT/setup-torrents/: Makefile  instructions.md
anthology/: README.md
aspectj/: Makefile  notes.md
blog/: .gitignore  2017-12-06.md  2019-03-8.md  2020-02-10.md  2020-08-10.md  2020-08-11.md  2020-08-28.md  gnuplot-settings  monitor.sh  plot.sh  stlkr.cr.stats.txt  stlkr.rb.stats.txt  to_gnuplot.rb
blog/2017-12-06/: 2017-12-06.md  Makefile  plot.sh
blog/2018-11-03/: README.md
blog/2019-01-22/: README.md
books/expert-c-programming/: Makefile  xxiii-unix-hounds.c
compilers/brainfuck/: README.md  WORKSPACE  gtest.BUILD
compilers/brainfuck/core/: BUILD  brainfuck.cc  brainfuck.h  hello-world.bf
compilers/brainfuck/test/: BUILD  bftest.cc
compilers/tinyvm/: Makefile  tvm.c
haze/document/: analysis.tex  core.tex  introduction.tex  outstanding-q.tex
haze/document/conf/: packages.tex
it/lo-versioning/: Makefile  lo-versioning.markdown
languages/ada/psytypes/: README.md  (+1 more)
languages/bash/: Makefile  simple_looping.markdown
languages/c/little-shop-of-horrors/: CMakeLists.txt
languages/c/little-shop-of-horrors/src/: sendfile-horror.c  statx-example.c
languages/cxx/threading/: CMakeLists.txt  simple_locks.cxx  simple_locks_increment.cxx  simple_threading.cxx
languages/frac/: .body.tex.swp  Makefile  body.tex  core.tex
languages/go/: ssdeep_hash_experiment.go
languages/java/: .java-basics.markdown.swp  Makefile  condensed-basics.markdown  java-basics.markdown
languages/julia/: basic.jl
languages/lua/: meatsicle.lua  simple.lua
languages/misc/: things-that-helped.markdown
languages/oparticles/: Makefile  body.tex  core.tex
languages/rust/: TODO
languages/rust/concurrency/: Cargo.toml
languages/rust/concurrency/doc/: conc-rust-v1.markdown  conc.markdown
languages/rust/concurrency/src/: prodcon.rs  soe.rs
languages/sql-notes/: sqlite3-notes.markdown
papers/: bibliography
patterns/refactor-slides/: refactor-13-01-2014.markdown
refactor/: Makefile  refactor-13-01-2014.markdown  refactor-21-01-2014.markdown
refactor/refactor-slides/: Makefile
scala-notes/: notes.markdown
sclack/figures/: domainmodel.odg
specifications/: README.md
specifications/cynic/: Makefile
specifications/multiple-data-sources-retrieve/: Makefile  mdsr.markdown
specifications/nous/: main.tex
specifications/orion/: .gitignore
specifications/turntables/: .gitignore
sql-notes/: .gitignore  Makefile  sqlite3-notes.markdown
turntables/: .gitignore
turntables/document/: analysis.tex  core.tex  design.tex  implementation.tex  introduction.tex
turntables/sequence-diagrams/: overall-flow.iuml
utils/: using-screen.markdown
utils/lo-versioning/: sample-doc.odt  sample-doc2.odt
utils/music/: Makefile  music-software.markdown
utils/screen/: Makefile  using-screen.markdown
writing/: my-friend-alex.txt
(+318 files in other folders)
